--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TradingView</string>
+    <string name="title_activity_graph_viewer">GraphViewer</string>
 </resources>
