Changes: * Added confirmation when selecting a stock from the global list. * Added functionality to read the data.json file and get the symbols. * Added API requests to get the individual stocks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">TradingView</string>
+    <string name="app_name">Chineese_tradingview</string>
     <string name="StocksList">StocksList</string>
 </resources>
